[package]
name = "rustris"
version = "0.1.0"
edition = "2021"

[build]
build = "build.rs"

[workspace]
members = [
  "renderer",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
serde = { version = "1.0.*", features = ["derive"] }
toml = { version = "0.8.10", features = ["parse"] }
anyhow = "1.0.79"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
image = "0.24.8"

# Rendering/Window
winit = "0.29.10"
winit_input_helper = "0.15.3"
pixels = "0.13.0"
tiny-skia = "0.11.4"

# Logging
chrono = "0.4.33"
env_logger = "0.11.2"
log = "0.4.20"

# Config file handling
config = "0.14.0"

# Workspace Crates
renderer = { path = "renderer" }

[build-dependencies]
git2 = "0.18.2"
