[package]
name = "rustris"
version = "0.1.0"
edition = "2021"

[build]
build = "build.rs"

[workspace]
members = [
  "renderer",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
# serde = { version = "1.0.*", features = ["derive"] }
# toml = { version = "0.8.10", features = ["parse"] }
# config = "0.14.0"
anyhow = "1.0.79"
lazy_static = "1.4.0"
maplit = "1.0.2"
game-loop = { version = "1.1.0", features = ["winit"] }
arcstr = "1.1.5"


# Rendering/Window
winit = { version = "0.29.10", features = ["rwh_05"] }
winit_input_helper = "0.15.3"
pixels = "0.13.0"
image = "0.24.8"

# Logging
chrono = "0.4.33"
log4rs = "1.3.0"
log = "0.4.20"

# Workspace Crates
renderer = { path = "renderer" }

[build-dependencies]
git2 = "0.18.2"
