[package]
name = "rustris"
version = "0.1.0"
edition = "2021"

[build]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
anyhow = "1.0.79"
lazy_static = "1.4.0"
maplit = "1.0.2"
game-loop = { version = "1.1.0", features = ["winit"] }
fontdue = "0.8.0"


# Rendering/Window
winit = { version = "0.29.10", features = ["rwh_05"] }
winit_input_helper = "0.15.3"
pixels = "0.13.0"
image = "0.24.8"

# Logging
chrono = "0.4.33"
log4rs = "1.3.0"
log = "0.4.20"

[build-dependencies]
git2 = "0.18.2"
